Fix Google maps overflowing viewport
This adds a (somewhat hidden) feature to Kanisa-flavoured
markdown, where you can add a map by using:

{gmap:[msid]}

where msid can be obtained by finding the MSID parameter
from a Google maps URL. Since it seems not all maps have an
MSID, I'll probably change this in future to just be a
widget that takes a link to a map, and configures it for
embedding.

--- a/kanisa/static/kanisa/css/kanisa.css
+++ b/kanisa/static/kanisa/css/kanisa.css
@@ -432,3 +432,22 @@ p.error-page-btn {
 #xs-management-menu {
     margin: 0 0 1em 0;
 }
+
+/*
+From http://themeloom.com/2013/02/tips-embed-google-maps-and-calendars-in-a-responsive-wordpress-theme/
+*/
+.responsive-iframe-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.responsive-iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
